--- a/assets/project_as_gem.yml
+++ b/assets/project_as_gem.yml
@@ -108,38 +108,30 @@
   :test: []
   :source: []
 
-# Defines to be injected into the builds
-#   in order to add common defines:
-#     1) remove the trailing [] from the :common: section
-#     2) add entries to the :common: section (e.g. :test: has TEST defined)
+# Compilation symbols to be injected into builds
+# See documentation for advanced options:
+#  - Test name matchers for different symbols per test executable build
+#  - Referencing symbols in multiple lists using advanced YAML
+#  - Specifiying symbols used during test preprocessing
 :defines:
-  :common: &common_defines []
   :test:
-    - *common_defines
-    - TEST
-  :test_preprocess:
-    - *common_defines
-    - TEST
+    - TEST # Simple list option to add symbol 'TEST' to compilation of all files in all test executables
   :release: []
-  :release_preprocess: []
 
-  # enable to have the name of the test defined with each test build. 
-  # this is SLOW as it requires all files to be rebuilt for each test module
+  # Enable to inject name of a test as a unique compilation symbol into its respective executable build. 
   :use_test_definition: FALSE 
 
-# flags allows you to configure the flags used when calling the different tools in 
-# your toolchain. It can be used to override flags for specific files. Overriding flags 
-# here is easier than building a new tool from scratch, but it only applies to when 
-# you're calling gcc
+# Configure additional command line flags provided to tools used in each build step
 # :flags:
 #   :release:
+#     :compile:         # Add '-Wall' and '--02' to compilation of all files in release target
+#       - -Wall
+#       - --O2
+#   :test:
 #     :compile:
-#       'main': 
-#         - -Wall
-#         - --O2
-#       'test_.+':   # add '-pedantic' to all test-files
+#       '(_|-)special': # Add '-pedantic' to compilation of all files in all test executables with '_special' or '-special' in their names
 #         - -pedantic
-#       '*':          # add '-foo' to compilation of all files not main.c or test files
+#       '*':            # Add '-foo' to compilation of all files in all test executables
 #         - -foo
 
 # Configuration Options specific to CMock. See CMock docs for details
@@ -161,10 +153,6 @@
 :unity:
   :defines:
     - UNITY_EXCLUDE_FLOAT
-
-# Configuration options specify to Unity's test runner generator
-:test_runner:
-  :cmdline_args: FALSE
 
 # You can optionally have ceedling create environment variables for you before
 # performing the rest of its tasks.
